updated ci configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,22 +20,21 @@ jobs:
 
     - name: Install dependencies
       run: |
-        cd fastapi_parking
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install flake8 black isort mypy
 
     - name: Run flake8
-      run: cd fastapi_parking && flake8 .
+      run: flake8 app tests run.py
 
     - name: Run black
-      run: cd fastapi_parking && black --check .
+      run: black --check app tests run.py
 
     - name: Run isort
-      run: cd fastapi_parking && isort --check-only .
+      run: isort --check-only app tests run.py
 
     - name: Run mypy
-      run: cd fastapi_parking && mypy .
+      run: mypy app
 
     - name: Run tests
-      run: cd fastapi_parking && pytest
+      run: pytest
