--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,5 +36,8 @@ jobs:
     - name: Run mypy
       run: mypy app
 
+    - name: Install app in editable mode
+      run: pip install -e .
+
     - name: Run tests
       run: pytest
